/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package org.tasktide.itemstore;

/**
 *
 * @author bkenna
 */
public enum DbTarget {
    MASTER, PROTOTYPE, BOTH;
}
