@startuml


/'
################################################################
################################################################
##
## 2). TaskTide ItemStore
##
################################################################
################################################################
'/


class org.tasktide.itemstore.Item<T> {
  .. **Attributes** ..
  - String id, state, payload
  
  .. **Construction** ..
  + Item()
  + Item(String, String, String)

  .. **Getters & Setters** ..
  + void setId(String)
  + void setState(String)
  + void setPayload(String)
  + String getId()
  + String setState()
  + String setPayload()
}


interface org.tasktide.itemstore.ItemStore <<itemstore>> #F8DE7E {
  + {abstract} String getStoreName()
  + {abstract} String getMasterFilePath()
  + {abstract} String getFilePath()
  + {abstract} String getDbDirectory()

  + {abstract} void saveItem(DbTarget, Item) throws Exception
  + {abstract} void saveItems(DbTarget, List<Item>) throws Exception
  + {abstract} List<Item> getAll(DbTarget)
  + {abstract} Item getById(DbTarget, String) throws Exception
  + {abstract} List<Item> getItemsByState(DbTarget, String) throws Exception
  + {abstract} String getPayloadById(DbTarget, String)
  + {abstract} boolean delete(DbTarget, Item) throws Exception
  + {abstract} void syncToMaster(Item) throws Exception
  + {abstract} void syncToMaster(List<Item>) throws Exception
  + {abstract} void syncToMaster() throws Exception
  + {abstract} boolean cacheMaster() throws Exception
  + {abstract} boolean clearPrototype()
  + {abstract} boolean closeConn(DbTarget)
  + {abstract} boolean openConn(DbTarget)
}


abstract class org.tasktide.itemstore.AbstractItemStore <<implements itemstore>> #FFE5B4 {
  - String storeName
  - Path dbDirectory, masterDB
  - Path protoDB, masterLock
  - FileChannel fileChannel
  - FileLock fileLock
  - Random RANDOM

  .. **ItemStore Implementation** ..
  + String getStoreName()
  + String getMasterFilePath()
  + String getDbDirectory()
  + void syncToMaster(Item) throws Exception
  + void syncToMaster(List<Item>) throws Exception
  + void syncToMaster() throws Exception
  + boolean cacheMaster()
  + boolean clearPrototype()

  .. **Decorator Methods** ..
  - boolean tryLock() throws IOException
  - boolean makeMasterLockFile()
  # void waitForLock() throws InterruptedException, IOException
  # boolean releaseLock()
  - void deleteRecursively(Path) throws IOException
}


enum org.tasktide.itemstore.DbTarget #CCCCFF {
    .. **Enum Values** ..
    MASTER, PROTOTYPE, BOTH
}


class org.tasktide.itemstore.RocksDBStore << extends itemstore >> #C6DAF7 {
    .. **Attributes** ..
    - RocksDB master, proto
    - Options options
    - ObjectMapper MAPPER

    .. **Construction** ..
    + RocksDBStore(String, String, String, String)

    .. **Decorator Methods** ..
    + RocksIterator fetchIter(RocksDB)
    + Item fetchIteratorValue(RocksIterator)
    + void putItem(RocksDB, byte[], byte[])
    
    .. **ItemStore Implementation** ..
    + List<Item> getAll(DbTarget)
    + void saveItem(DbTarget, Item)
    + void saveItems(DbTarget, List<Item>)
    + boolean delete(DbTarget, Item)
    + Item getById(DbTarget, String)
    + List<Item> getItemsByState(DbTarget, String)
    + String getPayloadById(DbTarget, String)
    + boolean closeConn(DbTarget)
    + boolean openConn(DbTarget)
}


class org.tasktide.itemstore.SqliteStore << extends itemstore >> #C6DAF7 {
    .. **Attributes** ..
    - Connection master, proto
    - Logger LOGGER

    .. **Construction** ..
    + SqliteStore(String, String, String, String)

    .. **Decorator Methods** ..
    - void initItemStore()
    - boolean iniDatabase(Connection)
    - boolean putItem(Connection, Item)
    - Item parseItem(ResultSet)
    - List<Item> consumeResultSet(ResultSet)
    - List<Item> selectAll(Connection)
    - List<Item> selectQuery(Connection, String, String)
    - boolean deleteItem(Connection, Item)
    
    .. **ItemStore Implementation** ..
    + List<Item> getAll(DbTarget)
    + void saveItem(DbTarget, Item)
    + void saveItems(DbTarget, List<Item>)
    + boolean delete(DbTarget, Item)
    + Item getById(DbTarget, String)
    + List<Item> getItemsByState(DbTarget, String)
    + String getPayloadById(DbTarget, String)
    + boolean closeConn(DbTarget)
    + boolean openConn(DbTarget)
}


org.tasktide.itemstore.AbstractItemStore ..|> org.tasktide.itemstore.ItemStore
org.tasktide.itemstore.RocksDBStore --|> org.tasktide.itemstore.AbstractItemStore
org.tasktide.itemstore.SqliteStore --|> org.tasktide.itemstore.AbstractItemStore
org.tasktide.itemstore.ItemStore --o org.tasktide.itemstore.Item
org.tasktide.itemstore.ItemStore --> org.tasktide.itemstore.DbTarget


@enduml